# Code-Graph

./: pyproject.toml  requirements.txt
codegraph/: __init__.py  __main__.py  cli.py  viz.py
codegraph.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
codegraph/graph/: store.py
codegraph/ingestion/: git_reader.py  parser.py
codegraph/mcp/: server.py
